@@ -1043,6 +1043,8 @@ exit:
     if (rc != RPMRC_NOTFOUND) {
 	buf[sizeof(buf)-1] = '\0';
 	if (msg) *msg = xstrdup(buf);
+if (_pkgio_debug)
+fprintf(stderr, "--> headerCheck #1: rc %d \"%s\"\n", rc, (msg ? *msg: ""));
 	return rc;
     }
 
@@ -1061,6 +1063,8 @@ exit:
 	}
 	buf[sizeof(buf)-1] = '\0';
 	if (msg) *msg = xstrdup(buf);
+if (_pkgio_debug)
+fprintf(stderr, "--> headerCheck #2: rc %d \"%s\"\n", rc, (msg ? *msg: ""));
 	return rc;
     }
 
@@ -1180,6 +1184,8 @@ assert(dig != NULL);
     buf[sizeof(buf)-1] = '\0';
     if (msg) *msg = xstrdup(buf);
 
+if (_pkgio_debug)
+fprintf(stderr, "--> headerCheck #3: rc %d \"%s\"\n", rc, (msg ? *msg: ""));
     return rc;
 }
 
@@ -1373,6 +1379,8 @@ exit:
 	*msg = xstrdup(buf);
     }
 
+if (_pkgio_debug)
+fprintf(stderr, "--> rpmReadHeader: rc %d \"%s\"\n", rc, (msg ? *msg: ""));
     return rc;
 }
 
